--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 
 .container {
   display: block;
-  width: 50%;
+  inline-size: 50%;
   margin: auto;
 
 }
@@ -20,8 +20,8 @@ body {
 .btn {
   margin: 25px;
   display: inline-block;
-  height: 200px;
-  width: 200px;
+  block-size: 200px;
+  inline-size: 200px;
   border: 10px solid black;
   border-radius: 20%;
 }
